# llm-security-framework

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: run_demo.py
docs/: adding-a-plugin.md
llmst/: __init__.py  cli.py  reporter.py  runner.py  scorer.py
llmst/adapters/: __init__.py  anthropic_adapter.py  base.py  http_adapter.py  ollama_adapter.py  openai_adapter.py
llmst/plugins/: __init__.py  base.py  indirect_injection.py  jailbreak_chains.py  persona_override.py  rag_poisoning.py  tool_abuse.py
tests/: test_plugins.py  test_runner.py  test_scorer.py
