[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-security-tester"
version = "0.1.0"
description = "Modular CLI tool for systematic LLM application security testing across 5 attack categories"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "llm-security-tester contributors" }]
keywords = ["llm", "security", "testing", "jailbreak", "prompt-injection", "ai-safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.1",
    "openai>=1.0",
    "anthropic>=0.25",
    "httpx>=0.27",
    "rich>=13.0",
    "pydantic>=2.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
ollama = ["ollama>=0.2"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-jinja2",
]

[project.scripts]
llmst = "llmst.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/llm-security-tester"
Issues = "https://github.com/your-org/llm-security-tester/issues"

[tool.hatch.build.targets.wheel]
packages = ["llmst"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
